--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation libs.ui.tooling.preview
     implementation libs.material.icons.extended
     debugImplementation libs.ui.tooling
+    implementation libs.lifecycle.runtime.ktx
 
 
 }
